--- a/.github/workflows/run_pytest.yml
+++ b/.github/workflows/run_pytest.yml
@@ -2,7 +2,7 @@ name: Run PyTest
 
 on:
     workflow_dispatch
-    pull request:
+		pull_request:
         types:
             -opened
             -reopened
