--- a/.github/workflows/run_pytest.yml
+++ b/.github/workflows/run_pytest.yml
@@ -1,31 +1,27 @@
-name: Run PyTest
+name: Run Pytest
 
-on:
-    workflow_dispatch
-		pull_request:
+on: 
+    workflow_dispatch:
+    pull_request:
         types:
-            -opened
-            -reopened
-            -synchronize
-            -ready_for_review
+            - opened
+            - reopened
+            - synchronize
+            - ready_for_review
 
 jobs:
     pytest:
-        runs-on:ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
-          -name: checkout the repo
-           uses: actions/checkout@V3
-          -name: Set up Python
-           uses: actions/setup-python@v3
-           with:
-            python-version: "3.x"
-              - name: Install dependencies
-                run:
-                    python -m pip install --upgrade pip
-                    pip install -r requirements.txt
-                  -name: Test with pytest
-                    run: pytest
-              
-          
-           
-
+            - name: Checkout the repo
+              uses: actions/checkout@v3
+            - name: Set up Python
+              uses: actions/setup-python@v3
+              with:
+                python-version: "3.x"
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.txt
+            - name: Test with pytest
+              run: pytest
